--- a/app/views/administrations/index.html.erb
+++ b/app/views/administrations/index.html.erb
@@ -33,7 +33,7 @@
         <td><%= user.username %></td>
         <td><%= user.firstname %></td>
         <td><%= user.lastname %></td>
-        <td><%= user.role.role %></td>
+        <td><%= user.get_role_name %></td>
         <% if user.vendor.present? %>
           <td><%= user.vendor.name %></td>
         <% else %>
